# test-impl-of-paper-Verifying-Jolt-zkVM-Lookup-Semantics

./: Cargo.toml  LICENSE  README.md
src/: core.rs  execution.rs  instructions.rs  jolt_instructions.rs  lib.rs  memory.rs  register.rs  utils.rs
src/crypto/: commitment.rs  extensions.rs  hash.rs  lasso.rs  lookup.rs  merkle.rs  mod.rs  plonk.rs  polynomial.rs  proof.rs  proof_generator.rs
src/crypto/advanced/: quantum.rs
src/crypto/lookup/: proof.rs  table.rs
src/crypto/proof/: generator.rs
src/field/: fr.rs  mod.rs
src/instructions/: arithmetic.rs  encoding.rs  floating.rs  vector.rs
src/memory/: paging.rs  system.rs
src/optimization/: execution.rs
src/optimizer/: jit.rs
src/semantics/: formal.rs  memory.rs  operational.rs
src/semantics/formal/: mod.rs
src/verification/: lookup_verifier.rs  semantic_checker.rs
src/zk/: constraint_system.rs
tests/: instructions_test.rs
